2004-10-14  Dalibor Topic <robilad@kaffe.org>

	* libraries/javalib/java/util/zip/GZIPInputStream.java,
	libraries/javalib/java/util/zip/GZIPOutputStream.java:
        Resynced with GNU Classpath.

	2004-10-12  Michael Koch  <konqueror@gmx.de>

        * java/util/zip/GZIPInputStream.java
        (GZIP_MAGIC): Fixed value.
        (readHeader): Fixed GZIP_MAGIC handling.
        * java/util/zip/GZIPOutputStream.java
        (GZIPOutputStream): Likewise.

2004-10-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(tDump): Removed unaccessible debugging information (will be readded
	later).
	Removed unused occurrences of iLockRoot.

2004-10-14  Helmer Kraemer  <hkraemer@freenet.de>

	* libraries/clib/native/System.c (java_lang_System_initProperties): 
	don't crash if setlocale returns NULL
	
2004-10-12  Dalibor Topic <robilad@kaffe.org>

	*  libraries/javalib/java/lang/SecurityManager.java:
        Resynced with GNU Classpath.

	2004-10-12  Jeroen Frijters  <jeroen@frijters.net>

        * java/lang/SecurityManager.java
        (checkPackageAccess, checkPackageDefinition): Pass complete
        restriction.
        (checkPackageList): Simplified and corrected the code.

2004-10-12  Dalibor Topic <robilad@kaffe.org>

	* libraries/javalib/java/util/Date.java:
	Resynced with GNU Classpath.

	2004-10-12  Jeroen Frijters  <jeroen@frijters.net>

        * java/util/Date.java
        (Date(int,int,int), Date(int,int,int,int,int)): Delegate to other
        constructor.
        (Date(int,int,int,int,int,int)): Fixed to handle out-of-range
        arguments.
        (getTimezoneOffset): Inverted sign.

2004-10-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/thread.c
	(startSpecialThread): Use arg to get the specific arguments to start
	the special thread.
	(createDaemon): Use the real argument to the thread instead of
	exceptObj and exceptPtr to pass arguments.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c